--- a/style.css
+++ b/style.css
@@ -31,6 +31,8 @@ body {
 }
 
 .grid-container{
+    display: flex;
+    flex-wrap: wrap;
     text-align: center;
     margin: auto;
     width: 80%;
@@ -38,9 +40,13 @@ body {
 }
 
 .card{
-    height: 30%;
+    margin: 10px;
     width: 10%;
-    background-color: greenyellow;
+    background-color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    aspect-ratio: 1 / 2;
     color: #000;
 }
 
@@ -64,4 +70,12 @@ body {
 
 #gamemode{
     width: 10%;
+}
+
+#data{
+    width: 30%;
+    padding-left: 15px;
+    margin-left: 15px;
+    float: right;
+    font-style: italic;
 }
